--- a/Automation/Automation.App/Views/WorkflowUI/WorkflowGraph.xaml
+++ b/Automation/Automation.App/Views/WorkflowUI/WorkflowGraph.xaml
@@ -73,15 +73,56 @@
 
                 <DataTemplate DataType="{x:Type scopes:TaskNode}">
                     <nodify:Node
-                        Header="{Binding Name}"
-                        Input="{Binding AllInputs}"
-                        Output="{Binding AllOutputs}">
+                        Input="{Binding Inputs}"
+                        Output="{Binding Outputs}"
+                        Header="{Binding Name}">
+                        <nodify:Node.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem Header="Add input">
+                                    <MenuItem.Icon>
+                                        <TextBlock
+                                            VerticalAlignment="Center"
+                                            FontFamily="{StaticResource FontAwesomeSolid}"
+                                            Text="{x:Static components:IconFont.RightToBracket}" />
+                                    </MenuItem.Icon>
+                                </MenuItem>
+                                <MenuItem Header="Add Output">
+                                    <MenuItem.Icon>
+                                        <TextBlock
+                                            VerticalAlignment="Center"
+                                            FontFamily="{StaticResource FontAwesomeSolid}"
+                                            Text="{x:Static components:IconFont.RightFromBracket}" />
+                                    </MenuItem.Icon>
+                                </MenuItem>
+                            </ContextMenu>
+                        </nodify:Node.ContextMenu>
+                        <nodify:Node.Style>
+                            <Style TargetType="{x:Type nodify:Node}" BasedOn="{StaticResource {x:Type nodify:Node}}">
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding Type}" Value="FlowTask">
+                                        <Setter Property="HeaderBrush" Value="{DynamicResource ItemContainer.BorderBrush}" />
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </nodify:Node.Style>
                         <nodify:Node.InputConnectorTemplate>
                             <DataTemplate DataType="{x:Type scopes:NodeConnector}">
                                 <nodify:NodeInput
                                     Header="{Binding Name}"
                                     IsConnected="{Binding IsConnected}"
                                     Anchor="{Binding Anchor, Mode=OneWayToSource}">
+                                    <nodify:NodeInput.ContextMenu>
+                                        <ContextMenu>
+                                            <MenuItem Header="Delete connector">
+                                                <MenuItem.Icon>
+                                                    <TextBlock
+                                                        VerticalAlignment="Center"
+                                                        FontFamily="{StaticResource FontAwesomeSolid}"
+                                                        Text="{x:Static components:IconFont.Trash}" />
+                                                </MenuItem.Icon>
+                                            </MenuItem>
+                                        </ContextMenu>
+                                    </nodify:NodeInput.ContextMenu>
                                     <nodify:NodeInput.Style>
                                         <Style TargetType="{x:Type nodify:NodeInput}" BasedOn="{StaticResource {x:Type nodify:NodeInput}}">
                                             <Style.Triggers>
@@ -101,6 +142,18 @@
                                     Header="{Binding Name}"
                                     IsConnected="{Binding IsConnected}"
                                     Anchor="{Binding Anchor, Mode=OneWayToSource}">
+                                    <nodify:NodeOutput.ContextMenu>
+                                        <ContextMenu>
+                                            <MenuItem Header="Delete connector">
+                                                <MenuItem.Icon>
+                                                    <TextBlock
+                                                        VerticalAlignment="Center"
+                                                        FontFamily="{StaticResource FontAwesomeSolid}"
+                                                        Text="{x:Static components:IconFont.Trash}" />
+                                                </MenuItem.Icon>
+                                            </MenuItem>
+                                        </ContextMenu>
+                                    </nodify:NodeOutput.ContextMenu>
                                     <nodify:NodeOutput.Style>
                                         <Style TargetType="{x:Type nodify:NodeOutput}" BasedOn="{StaticResource {x:Type nodify:NodeOutput}}">
                                             <Style.Triggers>
