--- a/Automation/Automation.App/Components/ScopedSelector.xaml
+++ b/Automation/Automation.App/Components/ScopedSelector.xaml
@@ -1,18 +1,17 @@
 ﻿<UserControl
-    x:Class="Automation.App.Components.NodeSelector"
+    x:Class="Automation.App.Components.ScopedSelector"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Automation.App.Components"
     xmlns:components="clr-namespace:Automation.App.Components"
-    xmlns:scopes="clr-namespace:Automation.Base;assembly=Automation.Base"
+    xmlns:baseViewModels="clr-namespace:Automation.Base.ViewModels;assembly=Automation.Base"
     xmlns:graph="clr-namespace:Automation.App.ViewModels.Graph"
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
-    mc:Ignorable="d"
-    d:DataContext="{d:DesignInstance local:NodeSelector}">
+    mc:Ignorable="d">
     <TreeView
-        DataContext="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:NodeSelector}}}"
+        DataContext="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:ScopedSelector}}}"
         Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}"
         MinWidth="200"
         ItemsSource="{Binding RootScope.SortedChildrens}"
@@ -31,14 +30,14 @@
             </Style>
         </TreeView.ItemContainerStyle>
         <TreeView.Resources>
-            <HierarchicalDataTemplate DataType="{x:Type scopes:Scope}" ItemsSource="{Binding SortedChildrens}">
+            <HierarchicalDataTemplate DataType="{x:Type baseViewModels:Scope}" ItemsSource="{Binding SortedChildrens}">
                 <StackPanel Orientation="Horizontal">
 
                     <components:NodeIcon Type="Scope" Margin="0,0,4,0" />
                     <TextBlock Text="{Binding Name}" />
                 </StackPanel>
             </HierarchicalDataTemplate>
-            <DataTemplate DataType="{x:Type scopes:Node}">
+            <DataTemplate DataType="{x:Type baseViewModels:ScopedNode}">
                 <StackPanel Orientation="Horizontal">
                     <components:NodeIcon Type="{Binding Type}" Margin="0,0,4,0" />
                     <TextBlock Text="{Binding Name}" />
