--- a/Automation/Automation.App/Views/TaskUI/TaskPage.xaml
+++ b/Automation/Automation.App/Views/TaskUI/TaskPage.xaml
@@ -4,8 +4,9 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:components="clr-namespace:Automation.App.Components"
     mc:Ignorable="d"
     d:DesignHeight="450"
     d:DesignWidth="800">
-    <Grid />
+    <components:DataVisualizer />
 </UserControl>
