--- a/Automation/Automation.App/Components/Display/NodeIcon.xaml
+++ b/Automation/Automation.App/Components/Display/NodeIcon.xaml
@@ -1,10 +1,10 @@
 ﻿<UserControl
-    x:Class="Automation.App.Components.NodeIcon"
+    x:Class="Automation.App.Components.Display.NodeIcon"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Components"
+    xmlns:local="clr-namespace:Automation.App.Components.Display"
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance local:NodeIcon}">
     <TextBlock
