--- a/Automation/Automation.App/Components/Inputs/FilePicker.xaml
+++ b/Automation/Automation.App/Components/Inputs/FilePicker.xaml
@@ -1,10 +1,11 @@
 ﻿<UserControl
-    x:Class="Automation.App.Components.FilePicker"
+    x:Class="Automation.App.Components.Inputs.FilePicker"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Components"
+    xmlns:local="clr-namespace:Automation.App.Components.Inputs"
+    xmlns:display="clr-namespace:Automation.App.Components.Display"
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     mc:Ignorable="d">
     <Grid DataContext="{Binding RelativeSource={RelativeSource AncestorType=local:FilePicker}}">
@@ -30,7 +31,7 @@
             </Button.Resources>
             <TextBlock
                 Foreground="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}"
-                Text="{x:Static local:IconFont.CircleXmark}"
+                Text="{x:Static display:IconFont.CircleXmark}"
                 FontFamily="{StaticResource FontAwesomeSolid}"
                 DataContext="{Binding Type, RelativeSource={RelativeSource AncestorType=local:NodeIcon}}" />
         </Button>
@@ -40,7 +41,7 @@
             Click="ButtonSelect_Click">
             <TextBlock
                 Foreground="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}"
-                Text="{x:Static local:IconFont.File}"
+                Text="{x:Static display:IconFont.File}"
                 FontFamily="{StaticResource FontAwesomeSolid}"
                 DataContext="{Binding Type, RelativeSource={RelativeSource AncestorType=local:NodeIcon}}" />
         </Button>
