--- a/Automation/Automation.App/Components/Inputs/ScopedSelector.xaml
+++ b/Automation/Automation.App/Components/Inputs/ScopedSelector.xaml
@@ -1,11 +1,11 @@
 ﻿<UserControl
-    x:Class="Automation.App.Components.ScopedSelector"
+    x:Class="Automation.App.Components.Inputs.ScopedSelector"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Automation.App.Components"
-    xmlns:components="clr-namespace:Automation.App.Components"
+    xmlns:local="clr-namespace:Automation.App.Components.Inputs"
+    xmlns:display="clr-namespace:Automation.App.Components.Display"
     xmlns:baseViewModels="clr-namespace:Automation.Base.ViewModels;assembly=Automation.Base"
     xmlns:graph="clr-namespace:Automation.App.ViewModels.Graph"
     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
@@ -33,13 +33,13 @@
             <HierarchicalDataTemplate DataType="{x:Type baseViewModels:Scope}" ItemsSource="{Binding SortedChildrens}">
                 <StackPanel Orientation="Horizontal">
 
-                    <components:NodeIcon Type="Scope" Margin="0,0,4,0" />
+                    <display:NodeIcon Type="Scope" Margin="0,0,4,0" />
                     <TextBlock Text="{Binding Name}" />
                 </StackPanel>
             </HierarchicalDataTemplate>
             <DataTemplate DataType="{x:Type baseViewModels:ScopedNode}">
                 <StackPanel Orientation="Horizontal">
-                    <components:NodeIcon Type="{Binding Type}" Margin="0,0,4,0" />
+                    <display:NodeIcon Type="{Binding Type}" Margin="0,0,4,0" />
                     <TextBlock Text="{Binding Name}" />
                 </StackPanel>
             </DataTemplate>
