--- a/Automation/Automation.App/Resources/Styles/IconButton.xaml
+++ b/Automation/Automation.App/Resources/Styles/IconButton.xaml
@@ -9,6 +9,15 @@
     </Style>
 
     <Style
+        x:Key="IconToggleButton"
+        TargetType="ToggleButton"
+        BasedOn="{StaticResource {x:Type ToggleButton}}">
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Height" Value="28" />
+        <Setter Property="Width" Value="28" />
+    </Style>
+
+    <Style
         x:Key="IconButtonSmall"
         TargetType="Button"
         BasedOn="{StaticResource {x:Type Button}}">
